<resources>
    <string name="service_name">Audio remote control service</string>
    <string name="app_name">HUD SAMPLE</string>
    <string name="obd2_name">OBD2</string>
    <string name="brightness_name">Brightness</string>
    <string name="keystone_name">Keystone</string>
    <string name="guide_name">HUD Guide</string>
    <string name="hidden_name">Hidden Menu</string>
    <string name="notification_name">Notification</string>
    <string name="sound_name">Sound</string>
    <string name="navigation_name">Navigation</string>
    <string name="software_update_name">Software Update</string>
    <string name="latest_version">This is the latest version.</string>
    <string name="old_version">This is the old version.</string>
    <string name="download">DOWNLOAD</string>
    <string name="update">UPDATE</string>
    <string name="request_hud_connect">Please connect hud.</string>
    <string name="disconnect_hotspot">disconnect hotspot.</string>
    <string name="sound_control">Sound Control</string>
    <string name="hello_world">Hello world!</string>
    <string name="auto_bright_ctl">Automatic \nBrightness Control</string>
    <string name="daytime_bright">Daytime Brightness</string>
    <string name="manual_bright">Manual Brightness</string>
    <string name="noti_exposure_time">Notification Exposure Time</string>
    <string name="nighttime_bright">Nighttime Brightness</string>
    <string name="auto_adjust_min">Automatic minimum brightness</string>
    <string name="system_info">System Information</string>
    <string name="system_version">System Version</string>
    <string name="ble_version">Ble Version</string>
    <string name="cur_version">Current Version</string>
    <string name="new_version">New Version</string>
    <string name="obdii_version">OBDII Version</string>
    <string name="fw_version">FW Version</string>
    <string name="db_version">DB Version</string>
    <string name="bluetooth_audio_out">Bluetooth Audio Out</string>
    <string name="tmap">Tmap</string>
    <string name="onenavi">OneNavi</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="pairing">Pairing</string>
    <string name="size">Size</string>
    <string name="big">Big</string>
    <string name="small">Small</string>
    <string name="location">Location</string>
    <string name="lower">Lower</string>
    <string name="up_per">Up-per</string>
    <string name="time">Time</string>
    <string name="music_info">Music Info</string>
    <string name="melon">Melon</string>
    <string name="news">news</string>
    <string name="podcast">Podcast</string>
    <string name="radio">Radio</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="cover">Cover</string>
    <string name="speed">Speed</string>
    <string name="speed_unit">Speed unit</string>
    <string name="speed_gauge">Speed Gauge</string>
    <string name="white">White</string>
    <string name="pink">Pink</string>
    <string name="cyan">Cyan</string>
    <string name="amber">Amber</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="speed_warning">Speed Warning</string>
    <string name="speed_color">Speed Color</string>
    <string name="navigation_theme">Navigation Theme</string>
    <string name="normal">Normal</string>
    <string name="car">Car</string>
    <string name="color">Color</string>
    <string name="theme">Theme</string>
    <string name="gps_time">Time</string>
    <string name="taco">Taco</string>
    <string name="fault_alert">Fault Alert</string>
    <string name="call">Call</string>
    <string name="sms">SMS</string>
    <string name="kakaotalk">Kakaotalk</string>
    <string name="facebook">Facebook</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="wechat">WeChat</string>
    <string name="line">LINE</string>
    <string name="skype">Skype</string>
    <string name="viber">Viber</string>
    <string name="tango">Tango</string>
    <string name="nimbuzz">Nimbuzz</string>
    <string name="kik">Kik</string>
    <string name="telegram">Telegram</string>
    <string name="wifiap_title">Hotspot</string>
    <string name="wifi_title">Wi-Fi</string>
    <string name="wifiap_name">Name</string>
    <string name="never_ask_again">Never ask again</string>
    <string name="noti_hotspot_device_msg">To use kivicCast, please turn off "Allowed devices only" in "settings -connections - Mobile hotspot and tethering - Mobile hotspot - Menu - Allowed devices".</string>
    <string name="wifiap_password">Password</string>
    <string name="edit_pw_hint">More than 8 number</string>
    <string name="keystone_correction">Keystone correction \nWatch your HUD screen and adjust</string>
    <string name="hud_scale">HUD Scale</string>
    <string name="app_exit_content">Are you sure you want to exit Kivic HUD?</string>
    <string name="permission_setting">Permission Settings</string>
    <string name="permission_content">Do you want to set notification permissions?</string>
    <string name="obd2_setting">OBD2 Settings</string>
    <string name="gps_setting">GPS Settings</string>
    <string name="gps_content">Do you want to set location permissions?</string>
    <string name="notification_unknown">Notification : Unknown</string>
    <string name="gps_unknown">GPS Unknown</string>
    <string name="direction_unknown">Direction Unknown</string>
    <string name="gps_disconnect">GPS Disconnect</string>
    <string name="music_unknown">Unknown</string>
    <string name="kivic_full_screen">KIVIC Full Screen</string>
    <string name="kivic_mode_android">ANDROID MODE</string>
    <string name="kivic_mode_ios">IOS MODE</string>
    <string name="kivic_mode">Mode</string>
    <string name="bt_sound">BLUETOOTH SOUND CONNECT</string>
    <string name="hud_connect">HUD Connected</string>
    <string name="hud_disconnect">HUD Disconnected</string>
    <string name="kivic_loading_msg">kivic app is being loaded.</string>
    <string name="brightness_enable">Backlight ON/OFF</string>
    <string name="kivic_disconnect">Please disconnect the kivic app</string>
    <string name="intro_warning_both_services">Both the notification listener and the accessibility service is enabled. Please disable one of them.</string>
    <string name="accessibility_desc">Enable this service to allow Heads-up to read your notifications.\n\nDO NOT enable the accessibility service if your device is running Android 4.3 or newer (follow instructions inside the app instead).</string>
    <string name="kph">km/h</string>
    <string name="mph">MPH</string>
    <string name="warning">WARNING</string>
    <string name="accept">ACCEPT</string>
    <string name="dismiss">DISMISS</string>
    <string name="full_mode_noti">Feature not available while vehicle is moving. Press \'ACCEPT\' to use this feature and accept responsibility for its safe use while the vehicle is moving.</string>
    <string name="gps_title">GPS settings</string>
    <string name="gps_enable_noti">Your GPS seems to be disabled, do you want to go to settings menu?</string>
    <string name="gps_disable_noti">The speed updates will be stopped when the GPS is turned off. Do you want to go to settings menu?</string>
    <string name="ble_tesst">Ble Test</string>
    <string name="device">Device:</string>
    <string name="no_device">&lt;Select a device&gt;</string>
    <string name="select_device">Select a device</string>
    <string name="status">Status</string>
    <string name="llsWrite">LinkLossAlert</string>
    <string name="iasWrite">ImmediateAlert</string>
    <string name="scanning">Scanning for devices</string>
    <string name="no_ble_devices">No LE devices found.</string>
    <string name="connected">Connected</string>
    <string name="connected_navigation">Connected Navigation</string>
    <string name="disconnected">Not connected</string>
    <string name="ready">Ready</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">connect</string>
    <string name="unpair">unpair</string>
    <string name="pair">pair</string>
    <string name="RadioButton1">Alert level high</string>
    <string name="RadioButton2">Alert level mid</string>
    <string name="RadioButton3">Stop alerting</string>
    <string name="SystemId">SystemId</string>
    <string name="ModelNumber">ModelNumber</string>
    <string name="SerialNumber">SerialNumber</string>
    <string name="FirmwareRevision">FirmwareRevision</string>
    <string name="HardwareRevision">HardwareRevision</string>
    <string name="SoftwareRevision">SoftwareRevision</string>
    <string name="ManufactureName">ManufactureName</string>
    <string name="RegCertDataList">RegCertDataList</string>
    <string name="ManufactureId">    ManufactureId</string>
    <string name="BatteryLevel">    Battery Level</string>
    <string name="OrgId">    OrganizationId</string>
    <string name="Txpower">    Txpower Level</string>
    <string name="Noupdate">    No Update</string>
    <string name="ReadTxPower">ReadTxPower</string>
    <string name="high_alert">HIGH Alert triggered!</string>
    <string name="low_alert">LOW Alert triggered!</string>
    <string name="writeTxnoti">TxNoti</string>
    <string name="readRssi">Read Rssi Value</string>
    <string name="Readdummy">D Read</string>
    <string name="removeBond">Remove Bond</string>
    <string name="paired">paired</string>
    <string name="popup_title">Quit nRF UART?</string>
    <string name="popup_message">Do you want to quit this Application?</string>
    <string name="popup_yes">YES</string>
    <string name="popup_no">NO</string>
    <string name="ble_not_supported">Bluetooth Low Energy not supported</string>
    <string name="scan">Scan</string>
    <string name="cancel">Cancel</string>
    <string name="status_obd_no_support">NA</string>
    <string name="rpm">RPM : </string>
    <string name="hud_ble">HUD</string>
    <string name="obd2_ble">OBD2 BLE</string>
    <string name="demo">DEMO</string>
    <string name="sound_test">Sound Test</string>
    <string name="lcd_mode">Camera</string>
    <string name="kivic_cast_title">Kivic Cast</string>
    <string name="kivic_hud_title">HUD</string>
    <string name="trouble">Trouble : </string>
    <string name="toast_obd2_disconnect_noti">Please set the OBDII in Main Display</string>
    <string name="obd_protocol_title">OBD Protocol</string>
    <string name="recent_file_notfy">There are more recent version files than downloaded file.</string>
    <string name="notification">Notification</string>
    <string name="command">Command</string>
    <string name="all_notification">All Notification</string>
    <string name="hotspot_name">name : </string>
    <string name="hotspot_pw">password : </string>
    <string name="save">Save</string>
    <string name="restart_mirroring">Restart Mirroring...</string>
    <string name="ok">OK</string>
    <string name="security">Security</string>
    <string name="obd">OBDII</string>
    <string name="initialize">Initialize</string>
    <string name="invalid_product_name_notfy">Downloaded file has different model.\nPlease download again.</string>
    <string name="invalid_setting_value_notfy">The setting value is incorrect.\nPlease download again.</string>
    <string name="goto_market">Install the latest HUDControl\nApp.Go to Market.</string>
    <string name="wifi_content">Please enter your wifi name and password.</string>
    <string name="hotspot_content">Please enter your hotspot name and password.</string>
    <string name="wifi_insert_name">Please enter your wifi name.</string>
    <string name="request_hud_update">Please update HUD.</string>
    <string name="request_obd_connect">Please connect obdii.</string>
    <string name="manufacturer">manufacturer :</string>
    <string name="vehicle_name">vehicle name :</string>
    <string name="made_year">made year:</string>
</resources>